--- a/source/localisation/areas_regions_l_english.yml
+++ b/source/localisation/areas_regions_l_english.yml
@@ -86,14 +86,14 @@
  upper_andalucia_area:0 "上アンダルシア"
  upper_andalucia_area_name:0 "グラナダ"
  upper_andalucia_area_adj:0 "グラナダ"
- castille_area:0 "カスティーリャ"
- castille_area_name:0 "カスティーリャ"
- castille_area_adj:0 "カスティーリャ"
+ castille_area:1 "南カスティーリャ"
+ castille_area_name:1 "南カスティーリャ"
+ castille_area_adj:1 "カスティーリャ"
  toledo_area:0 "トレド"
  toledo_area_name:0 "トレド"
  toledo_area_adj:0 "トレド"
- asturias_area:0 "アストゥリアス"
- asturias_area_name:0 "アストゥリアス"
+ asturias_area:1 "北カスティーリャ"
+ asturias_area_name:1 "北カスティーリャ"
  asturias_area_adj:0 "アストゥリアス"
  leon_area:0 "レオン"
  leon_area_name:0 "レオン"
