--- a/source/localisation/dharma_l_english.yml
+++ b/source/localisation/dharma_l_english.yml
@@ -69,7 +69,7 @@
  GRANT_MAGISTRATE:0 "治安判事の任命"
  EST_VAL_GRANTED_MAGISTRATE:0 "治安判事の任命: §Y$VAL$%§!"
  EST_VAL_JAINS_JAIN_TEMPLES:0 "ジャイナ教寺院の建設: §Y$VAL$%§!"
- jain_tax_burden_autonomy_tooltip:0 "§Yジャイナ教徒§!によって支配されているすべての州は§R15%§!の自治率を獲得します。"
+ jain_tax_burden_autonomy_tooltip:0 "§Yジャイナ教徒§!によって支配されている州はすべて、自治率が§R15%§!増加します。"
  BUILD_JAIN_TEMPLE:0 "ジャイナ教寺院の建立"
  jain_temples_built:0 "ジャイナ教寺院"
  desc_jain_temples_built:0 "この州におけるジャイナ教寺院のパトロンは、州を開発しようと私たちが努力することを支援するよう、地域のジャイナ教コミュニティを励ます。"
@@ -432,8 +432,8 @@
  REQUIRED_TECHNOLOGY_NOT_REACHED:1 "政府を$GOV_NAME|Y$に変更する為には、統治技術がレベル$REQ_LEVEL|Y$必要です。"
  CONVERSION_NOT_ALLOWED_BECAUSE:0 "以下の理由で、政府変更できません："
  NOT_ENOUGH_MONARCH_POWER:0 "§R政府変更に必要な統治力が足りません。§!"
- HAS_REFORM:0 "$REFORM|Y$が制定されている\n"
- HAS_NOT_REFORM:0 "$REFORM|Y$が制定されていない\n"
+ HAS_REFORM:1 "Has enacted Government Reform $REFORM|Y$\n"
+ HAS_NOT_REFORM:1 "Has not enacted Government Reform $REFORM|Y$\n"
  GET_REFORM:0 "国家は$REFORM|Y$を得る"
  CULTURE_VIEW_ASSIMILATED_CULTURE_EXPLAIN:0 "州において、この文化の$PROVINCES|Y$の内、$OWNED|Y$を領有しています。文化を同化する為には、上記全ての州を領有する必要があります。"
  CULTURE_VIEW_IS_ASSIMILATED_CULTURE:0 "$NAME|Y$は全ての州を領有しているので、同化しています。よって、何のペナルティもありません。"
@@ -463,9 +463,9 @@
  ASSIMILATEDCULTUREGROUP_1:0 "$CULTURE_GROUP|Y$人"
  ASSIMILATEDCULTUREGROUP_2:0 "我が政府に同化されています。"
  ASSIMILATEDCULTUREGROUP_3:0 ""
- ASSIMILATEDCULTUREGROUP_4:0 "効果："
- ASSIMILATEDCULTUREGROUP_5:0 "$MODIFIER$"
- ASSIMILATEDCULTUREGROUP_6:0 ""
+ ASSIMILATEDCULTUREGROUP_4:1 "$EFFECT$"
+ ASSIMILATEDCULTUREGROUP_5:1 "効果："
+ ASSIMILATEDCULTUREGROUP_6:1 "$MODIFIER$"
  ASSIMILATEDCULTUREGROUP_LOG:0 "$CULTURE_GROUP$、同化へ"
  ASSIMILATEDCULTUREGROUP_BTN1:0 "OK"
  ASSIMILATEDCULTUREGROUP_BTN2:0 "OK"
@@ -477,9 +477,9 @@
  NONASSIMILATEDCULTUREGROUP_1:0 "我々は$CULTURE_GROUP|Y$の効果を喪失しました。"
  NONASSIMILATEDCULTUREGROUP_2:0 "我が政府に同化されています。"
  NONASSIMILATEDCULTUREGROUP_3:0 ""
- NONASSIMILATEDCULTUREGROUP_4:0 "我々は以下の効果を喪失しました："
- NONASSIMILATEDCULTUREGROUP_5:0 "$MODIFIER$"
- NONASSIMILATEDCULTUREGROUP_6:0 ""
+ NONASSIMILATEDCULTUREGROUP_4:1 "$EFFECT$"
+ NONASSIMILATEDCULTUREGROUP_5:1 "We have lost the effect:"
+ NONASSIMILATEDCULTUREGROUP_6:1 "$MODIFIER$"
  NONASSIMILATEDCULTUREGROUP_LOG:0 "$CULTURE_GROUP$、もはや同化とみなされず"
  NONASSIMILATEDCULTUREGROUP_BTN1:0 "OK"
  NONASSIMILATEDCULTUREGROUP_BTN2:0 "OK"
@@ -975,3 +975,5 @@
  COT_NOT_ENOUGH_DEVELOPMENT:0 "§R$UPGRADE_NAME|Y$にアップグレードするには$NEED$の開発度が必要ですが、この州の開発度は$CURR$しかありません"
  mechanic_disables_estate_nobles_yes:1 "§Y貴族§!階級を無効化する。"
  mechanic_disables_estate_nobles_no:1 "§Y貴族§!階級を有効にします。"
+ grant_consessions_to_the_eunuchs_tooltip:0 "The resolution of this Issue had the following effect:\nThe Eunuchs estate gained 20 loyalty."
+ grant_consessions_to_the_janissaries_tooltip:0 "The resolution of this Issue had the following effect:\nThe Janissaries estate gained 20 loyalty."
