--- a/source/localisation/nw2_l_english.yml
+++ b/source/localisation/nw2_l_english.yml
@@ -12,7 +12,7 @@
  PUE_ideas_start:0 "プエブロの伝統"
  PUE_ideas_bonus:0 "プエブロの宿願"
  ancient_pueblo_legacy:0 "プエブロの遺産"
- ancient_pueblo_legacy_desc:1 "すでに入植者たちが、この地域に移住し入植地を建設しています。我が長老たちは、語るべき物語を豊富に持ち合わせています。"
+ ancient_pueblo_legacy_desc:1 "For eons already, our people have lived and built settlements in this region. Our Elders have a rich story to tell."
  adobe_architecture:0 "アドベ製建築"
  adobe_architecture_desc:0 "乾燥した泥を建築材料として使うことで、固く耐久性のある入植地を建設できます。"
  mesa_settlements:0 "卓上台地入植地"
