--- a/source/localisation/prov_names_l_english.yml
+++ b/source/localisation/prov_names_l_english.yml
@@ -2119,7 +2119,7 @@
  PROV2151:0 "鄱陽"
  PROV2152:0 "建寧"
  PROV2153:0 "汀州"
- PROV2154:0 "ケラン"
+ PROV2154:1 "淡水"
  PROV2155:0 "ミッダ"
  PROV2156:0 "潮州"
  PROV2157:0 "恵州"
