--- a/source/localisation/scandinavia_l_english.yml
+++ b/source/localisation/scandinavia_l_english.yml
@@ -89,7 +89,7 @@
  costs_no_army_professionalism:1 "§Jこの傭兵団は雇用する際に§Y軍熟練度§!を消費しません。§!"
  global_merc_company:0 "§Y全世界§!で召集できます。"
  unlock_estate_cossacks_tt:0 "§Yコサック§!階級が解禁されます。"
- is_unavailable_estate_cossacks:0 "§Rこの階級は、§Y革命国家§!・§Y海賊共和国§!であるか、政府改革§Yシーチ・ラーダ§!・§Y天朝§!を採用している場合には利用できません。§!"
+ is_unavailable_estate_cossacks:1 "§RThis Estate is not available if we are §YRevolutionary§!, are a §YPirate Republican§! nation or have the §YCelestial Empire§! enacted.§!"
  disable_rebels_from_seize_land_for_estate_nobles:0 "§Y[Root.GetNobilityOrFallbackName]§!は、忠誠値が§Y30§!を下回っている時に土地を没収したとしても、反乱軍が蜂起しなくなります。"
  disable_rebels_from_seize_land_for_estate_brahmins:0 "§Y[Root.GetBrahminsOrFallbackName]§!は、忠誠値が§Y30§!を下回っている時に土地を没収したとしても、反乱軍が放棄しなくなります。"
  disable_rebels_from_seize_land_for_estate_burghers:0 "§Y[Root.GetBurghersOrFallbackName]§!は、忠誠値が§Y30§!を下回っている時に土地を没収したとしても、反乱軍が蜂起しなくなります。"
@@ -358,7 +358,7 @@
  flavor_swe.106.b.tt:0 "§Y独立戦争で外国の支援抜きで勝利できたなら、追加報酬を獲得できます。§!"
  flavor_swe.106.c:0 "デンマークは自然に自国を解放するだろう。いずれね..."
  flavor_swe.107.t:0 "[From.GetName]による独立支援の要請"
- flavor_swe.107.desc:1 "今朝方、[From.GetName]の使者が[Root.GetAdjective]の宮廷へ到着いたしました。彼らは独立を求めて自国の支援を要請してきました。[From.GetAdjective]国民とはほぼ共通点がないかもしれませんが、彼らは我が宿敵、デンマークの従属国です。彼らを支援することで、宿敵を弱らせ、バルト海における自国の影響力を拡大することができるでしょう。"
+ flavor_swe.107.desc:2 "今朝方、[From.GetName]の使者が[Root.GetAdjective]の宮廷へ到着いたしました。彼らは独立を求めて自国の支援を要請してきました。[From.GetAdjective]国民とはほぼ共通点がないかもしれませんが、彼らは我が敵、デンマークの従属国です。彼らを支援することで、敵を弱らせ、バルト海における自国の影響力を拡大することができるでしょう。"
  flavor_swe.107.a:0 "[From.GetName]を支援する！"
  flavor_swe.107.b:0 "独立した[From.GetName]から得られるものなどない。"
  flavor_swe.1060.t:0 "[Root.GetName]の独立"
@@ -999,7 +999,7 @@
  pu_overlord_bonus:0 "同君連合戦争への貢献"
  pu_subject_bonus:0 "同君連合戦争への貢献"
  teutonic_bishopric_reform:0 "チュートン司教国"
- teutonic_bishopric_reform_desc:0 "一般的な神権国家とよく似た、チュートン騎士団時代からの特徴を持つ特殊な国家。聖職者の支配者層は前線で部下と肩を並べて戦うことが許されている。"
+ teutonic_bishopric_reform_desc:0 "A special state very similar to one of a common theocracy, but with characteristics from the time of the Teutonic Order. The clerical rulership is allowed to fight side by side with their men at the front."
  prussian_theocratic_reform:0 "軍事神聖国家"
  prussian_theocratic_reform_desc:0 "もし守ることができなければ、信仰に何の価値があるのだろう？神の真なる従者は説教や祈りと同様に戦いを受け入れるのだ。我がプロイセン政府はこの規範に従って設計されており、軍隊は宗教そのものと同水準の重要性を有している。"
  holy_horde_reform:0 "神聖遊牧民"
@@ -2024,7 +2024,7 @@
  flavor_teu.42.t:0 "チュートン騎士団の状況"
  flavor_teu.42.desc:1 "ドイツ貴族の騎士であるチュートン騎士団は、現地部族をキリスト教化するためにバルト海沿岸部に設立されました。この使命は数十年前に達成されましたが、我々は古プロイセン人の土地に留まり、ここを自国の拠点にすることを決めましたーしかし、ポーランドは大変不満に思っています。この40年で、私たち騎士団はポーランドとその同盟国に対して4度戦争をしました。これらの戦争結果からの直近の挫折の結果、プロイセンの豊かな都市は私たちの権威に対して陰謀を企てています。プロイセン同盟の脅威が迫っていて、この脅威に対して早急に対処しなければならないでしょう...\n\nしかし、すべてが悲観的であるわけではありません。チュートン騎士団は今、将来の岐路に立っているのです。もし私たちがポーランドの脅威を打ち破ることができれば、私たち騎士団は新たな道を 選ぶことができるでしょう。"
  flavor_teu.42.a:0 "私たちに何が起こるか教えてれるのは時間だけです。"
- flavor_teu.42.a.tt:0 "§Yチュートン騎士団§!には独自のミッションツリーがあり、自由度の高いみっしょんとなっています。ミッション「§Yポーランドの打倒§!」完了後、イベントが発生し、分岐ミッションを以下の2つの経路のいずれかのミッションに置き換えることができます。\n\n§Yプロイセンルート§!\nプロイセンルートとは、チュートン騎士団を世俗化して解散させ、§Yプロイセン§!という国家に変態するルートです。それは歴史上最強の軍隊を保持すると同時に、プロイセン領の発展拡大を中心に展開するルートです。また、新しい分岐ルートに通じるルートもあり、そのルートでは、あなたがもし望めば、§YHREとの外交§!、§Yドイツへの拡大§!、ドイツの統一もしくポーランド及びルテニア内でプロイセン王国として§Y自身の運命を築く§!といった選択をあなたが決めることができます。\n\n§Y十字軍ルート§!\n十字軍ルートは、騎士団の本来の目的から外れないルートで、異教徒や異端者をキリスト教化していきます。あなたのミッションツリーは、§Y東ヨーロッパ§!及び§Y中央アジアののステップ§!の征服と改宗の遠征にあなたを導きます。"
+ flavor_teu.42.a.tt:0 "§Yチュートン騎士団§!には独自のミッションツリーがあり、自由度の高いミッションとなっています。ミッション「§Yポーランドの打倒§!」完了後、イベントが発生し、分岐ミッションを以下の2つの経路のいずれかのミッションに置き換えることができます。\n\n§Yプロイセンルート§!\nプロイセンルートとは、チュートン騎士団を世俗化して解散させ、§Yプロイセン§!という国家に変態するルートです。それは歴史上最強の軍隊を保持すると同時に、プロイセン領の発展拡大を中心に展開するルートです。また、新しい分岐ルートに通じるルートもあり、そのルートでは、あなたがもし望めば、§YHREとの外交§!、§Yドイツへの拡大§!、ドイツの統一もしくポーランド及びルテニア内でプロイセン王国として§Y自身の運命を築く§!といった選択をあなたが決めることができます。\n\n§Y十字軍ルート§!\n十字軍ルートは、騎士団の本来の目的から外れないルートで、異教徒や異端者をキリスト教化していきます。あなたのミッションツリーは、§Y東ヨーロッパ§!及び§Y中央アジアののステップ§!の征服と改宗の遠征にあなたを導きます。"
  flavor_teu.43.a.tt:0 "私たちは§Yチュートン騎士団§!の神聖ローマ帝国への加盟を無条件で受け入れます。\n帝国領邦である騎士団の近隣諸国は、この選択に脅威を感じるかもしれません。\n\n神聖ローマ帝国領邦である§Y[TEU.GetName]§!の隣国全ては、§Y[Root.GetName]§!の評価を§R150§!失います。"
  flavor_teu.44.t:0 "チュートン事件"
  flavor_teu.44.desc:0 "私たちは、皇帝の合意のみで神聖ローマ帝国に加盟しました。しかし、現在、私たちと国境を接する多くのドイツ諸国は、私たちの存在を脅威に感じており、神聖ローマ帝国全域に注意を払い、私たちの存在に対処するよう要求しています。"
@@ -3385,7 +3385,7 @@
  conserve_the_religion_reform:0 "宗教の保護"
  conserve_the_religion_reform_desc:1 "我々の社会では、国家の成立以来、信仰が重要な位置を占めてきた。革命の混乱の中にあっても、信念を失わないことが重要だ。"
  secularization_of_the_state_reform:0 "国家の世俗化"
- secularization_of_the_state_reform_desc:0 "多くの熱狂的な革命家は宗教の概念全体を破壊することを好むが、宗教が多くの人々にとって快適さと安全の源であることは否定できない。我々の目標は、信仰の消滅ではなく、政府から聖職者の機関を分離することであるべきだ。"
+ secularization_of_the_state_reform_desc:0 "While many zealous revolutionaries like to destroy the concept of religion as a whole, it is undeniable that it is a source of comfort and safety for many of our people. Our goal should not be the extinction of faith but the separation of the Clerical institutions from the government."
  bonus_stats_for_elected_ruler_tt:0 "§Yくじ引き選挙ボーナス§!：選出された統治者の全スキルが§G1§!増加します。"
  mechanic_bonus_stats_for_elected_ruler_yes:0 "選出された統治者の全スキルが§G1§!増加する"
  federal_senate_reform:0 "連邦元老院"
@@ -3413,7 +3413,7 @@
  maintain_nobles_status_quo_reform_desc:0 "我が国における貴族と君主との力の均衡は繊細な問題である。我々の最善の選択は、貴族の特権を増やしたり、その権力を抑制したりすることなく、この均衡を保つことである。"
  grant_nobles_electorate_reform:0 "貴族の選挙権"
  grant_nobles_electorate_reform_desc:0 "君主制の運命は、その統治者である君主と結びつけられている。そのため突然の統治者の死は常に、政府と国民に衝撃を与えるものになる。\n貴族に次の国家の支配者を選出する権利を与えることで、空位期間とその混乱を一時的なものとすることができるだろう。"
- blackmail_nobility_reform:0 "貴族人形の使い手"
+ blackmail_nobility_reform:1 "Puppet the Nobility"
  blackmail_nobility_reform_desc:0 "支配階級である地主や貴族は、自分たちが国家の問題を取り仕切っていると思い込んでいる。実際は君主の王朝とそれに仕えるスパイたちであり、貴族は彼らに抑制され、政府の単なる傀儡にすぎないことが保証されているのである。"
  grant_military_command_reform:1 "貴族将校団"
  grant_military_command_reform_desc:0 "聖職者が説教をし、市民が商業に従事し、平民が重労働をする一方で、貴族は狩りに出かけ、戦闘術の訓練に励んでいる。貴族に軍の指揮を任せることで、有能なリーダーを確実に軍に送り込むことができる。"
@@ -3553,8 +3553,8 @@
  public_hindu_practices_reform_desc:0 "バラモンとはヒンドゥー社会における司祭階級のことである。寺院を維持し、信仰の儀式を実践するのは彼らの責務である。"
  mechanic_reduce_new_deity_decision_cd_yes:2 "階級特権「§Y個人の主神の選択§!」がもはや影響力を増加させない\n「§Y個人の主神の選択§!」からの決断が§G5§!年ごとに実行できる"
  decision_once_every_five_years:0 "この決断は§Y5§!年に一度だけ実行できる。"
- strengthen_shaman_privileges_reform:0 "シャーマン特権の強化"
- strengthen_shaman_privileges_reform_desc:0 "自国のシャーマンは、彼らの言が全階級に対する法であるため、安定した国家維持に重要だ。彼らの特権を強化することで、支配者に対する彼らの忠誠心を確保できる。"
+ strengthen_shaman_privileges_reform:1 "Strengthen Clergy Privileges"
+ strengthen_shaman_privileges_reform_desc:1 "The clergy of our state is crucial for maintaining a stable state as their word is law to all classes. By strengthening their privileges we can ensure their loyalty to the ruler."
  mechanic_no_influence_from_fetishist_privileges_yes:1 "呪物崇拝特有の階級特権がもはや§Y聖職者§!階級の影響力を増やさない"
  abolished_caste_system_reform:0 "カーストの廃止"
  abolished_caste_system_reform_desc:0 "ヒンドゥー教のカースト制は欠陥のある腐敗した制度であり、国内の特定のグループを虐待することを助長している。\n我々はグル・ナーナクの教義に従い、カースト制をきっぱりと完全に廃止する。"
@@ -4411,7 +4411,7 @@
  hsa_imperial_favor_tt:0 "§Y神聖ローマ帝国§!から自国への評価がが§Y100§!以上の場合、彼らに影響を与えて、§Yホルシュタイン§!に中核を獲得します。"
  hsa_reduce_denmark_trade_tt:1 "デンマークのホルシュタインでの敗北は、§Yリューベック§!市場周辺の彼らの保持に§G悪影響§!をもたらすでしょう"
  hsa_till_it_gets_sunk_desc:0 "自身の§Y旗艦§!を沈むか捕獲されるるまで"
- hsa_largest_fleet_from_rivals_or_naval_ideas_tt:0 "全ての§Yライバル§!国より多くの艦船を有している"
+ hsa_largest_fleet_from_rivals_or_naval_ideas_tt:1 "Has a larger fleet than any §Yrival§! country or has completed §YNaval§! ideas"
  hsa_enacted_adler_von_lubeck_decision_tt:0 "国家の決断「§Yアドラー・フォン・リューベック§!」を制定している"
  hsa_sell_danzig_to_the_hansa_for_250_ducats_and_benefits_tt:0 "この州は総額250¤の販売と強力な交易ボーナスを§Y15§!年間獲得する"
  hsa_income_from_navy_supplies:1 "海軍用品の交易品から"
@@ -4534,15 +4534,15 @@
  custom_no_stability_loss_on_monarch_death:0 "葬儀の儀式"
  custom_no_stability_loss_on_monarch_death_desc:0 "死は人生の自然な一部だ－王でさえ死から逃れることはできない。君主の自然な終わりと、新しい統治の循環の始まりを祝福しよう。"
  custom_development_cost_modifier:0 "都市化の促進"
- custom_development_cost_modifier_desc:0 "地方集落は、自国経済を形成している。地方集落にも利点はあるが、活気ある帝国の大都市にはかなわない。都市化の過程を促進し、自国の農民が社会の階段を上るよう動機付けなければならない。"
- custom_monthly_church_power:0 "組織化された宗教的奉仕"
- custom_monthly_church_power_desc:0 "自国の教会では教会の奉仕の時間割が厳格に決められている。その過程は細部に至るまで計画され、例外なく全員がこの儀式に参加しなければならない。"
+ custom_development_cost_modifier_desc:0 "Rural settlements shape the economy of our country. Though they have their benefits, they are no match to the bustling metropolises of empires. We must promote the process of urbanization and motivate the peasants of our state to climb the social ladder."
+ custom_monthly_church_power:1 "組織化された宗教的奉仕"
+ custom_monthly_church_power_desc:1 "Our places of worship have a strict time table for cerimonies. The process is planned into its smallest detail and everyone with no exception has to participate in this ritual."
  custom_can_not_build_colonies:0 "移住の禁止"
  custom_can_not_build_colonies_desc:0 "自国はあらゆる人材を必要とする。ゆえに、植民地やその他の形態の移民に興味を持つことなどない。"
  custom_can_not_build_buildings:0 "失効した都市権"
  custom_can_not_build_buildings_desc:0 "都市があまりにも急速に発展し、政府の権威を脅かす存在となっている。都市権の剥奪、つまりは建物の権利を剥奪することでのみ、その権威を維持できる。"
  custom_can_not_build_missionaries:0 "強制改宗の禁止"
- custom_can_not_build_missionaries_desc:0 "宗教は毒であり、宗教というのは、自国の信じるものをたまたま信じない者たちを苦しめることでしか利益を得られない。強制改宗を禁止することは、自領内の者たちにとって賢明な方法だ。"
+ custom_can_not_build_missionaries_desc:1 "宗教は毒であり、宗教というのは、自国の信じるものをたまたま信じない者たちを苦しめることでしか利益を得られない。強制改宗を禁止することは、自領内の者たちにとって賢明な方法だ。"
  custom_can_not_declare_war:0 "国家平和主義"
  custom_can_not_declare_war_desc:0 "宣戦布告とは弱さの宣言である。自力で成長できない宣言をしているのだ。自国は平和主義の道を受容し、優れた道徳の道としている。"
  custom_can_not_send_merchants:0 "閉じられた市場"
@@ -4560,9 +4560,9 @@
  custom_allow_free_estate_privilege_revocation:0 "王室の権威"
  custom_allow_free_estate_privilege_revocation_desc:0 "階級と国家は協定を取り交わした。王室は階級からあらゆる特権を剥奪する権利を有する代わりに階級は存続させる。"
  custom_free_maintenance_on_expl_conq:0 "探検家精神"
- custom_free_maintenance_on_expl_conq_desc:0 "将軍や提督とは違い、自国の征服者や探検家は責務や個人の利益のためではなく、人類に隠されてきたものを明らかにしたいという欲求で出ていくのだ。"
+ custom_free_maintenance_on_expl_conq_desc:1 "将軍や提督とは違い、自国の征服者や探検家は責務や個人の利益のためではなく、人類に隠されてきたものを明らかにしたいという欲求で出ていくのだ。"
  custom_stability_cost_to_declare_war:0 "総力戦の勅令"
- custom_stability_cost_to_declare_war_desc:0 "戦。戦は我が国の知る全て。\n戦。戦はこの世界にもたらす全て。\n自部隊の行進で平和への幻想に隠れる者を揺り動かそう。"
+ custom_stability_cost_to_declare_war_desc:1 "戦。戦は我が国の知る全て。\n戦。戦はこの世界にもたらす全て。\n自部隊の行進で平和への幻想に隠れる者を揺り動かそう。"
  custom_transport_attrition:0 "大量のレモン"
  custom_transport_attrition_desc:0 "外海で最も一般的な水兵の死因理由の一つが壊血病だ。各船に樽いっぱいのレモンを載せることで、この呪われた病気による水兵の死者数を確実に減少させることができる。"
  custom_regiment_disembark_speed:0 "水陸両用訓練"
@@ -4664,11 +4664,11 @@
  desc_pol_global_maritime_empire_modifier:0 "交易と海洋の問題において、議論の余地がないほどの揺るぎない世界的勢力となった！"
  desc_pol_global_maritime_empire_2_modifier:0 "交易と海洋の問題に関して世界的で議論の余地がない、揺るがぬ勢力となったのだ！"
  desc_pol_poland_rise_modifier:0 "我が栄光の軍と行政は、誇りを持って新たな高みへと邁進し、栄光ある自国の旗の下にて奉仕している。"
- desc_pol_thriving_center_of_gdansk_modifier:0 "この州は商業中心地として繁栄しており、商機に満ちた不気味な都市だ。"
+ desc_pol_thriving_center_of_gdansk_modifier:1 "This province is a thriving center of commerce and a booming urban center full of mercantile opportunity."
  desc_pol_winter_preparations_modifier:0 "北部の厳しい冬に備え、十分な準備をした上で軍事作戦に臨む。"
  desc_pol_swedish_metal_imports_modifier:0 "スカンディナヴィアの上質な金属を輸入したことで武器や大砲をさらに大量生産できるようになり、自国の役に立っている。"
  desc_pol_victory_polish_crown_modifier:0 "スカンディナヴィアの名門国に凱歌をあげる。我が栄光は本当に留まることを知らない。"
- desc_pol_increased_production_of_metals_modifier:0 "現地の金属生産に不可欠の後押しを行い、生産ラインの拡大を実現した。"
+ desc_pol_increased_production_of_metals_modifier:1 "The local metal production has received a vital boost, resulting in an increased output."
  desc_pol_shared_prosperity_modifier:0 "我が二国は共に手を取り合い、一つとして繁栄しながら前進していくのだ！"
  desc_pol_efficient_taxation_lit_lands_modifier:0 "リトアニア王国東部領への課税は、自国財政に大きな結果をもたらした。"
  desc_pol_polish_empire_modifier:0 "自国の有能な外交官と行政官は帝国の行政機構拡大に成功した。"
@@ -4688,7 +4688,7 @@
  desc_lit_privilege_vilnius_modifier:0 "国内最上位の貴族と密接に協力することで、地域社会の寛容な基盤を強化することに成功した。"
  desc_lit_stable_rule_modifier:0 "自領内の自治領の時代は終わった。今、南方の全ての小領主や男爵は我が家臣だと言っていい。これは自国と自国民の成長に良い影響を与えた。"
  desc_lit_stable_rule_2_modifier:0 "自領内の自治領の時代は終わった。今、南方の全ての小領主や男爵は我が家臣だと言っていい。これは自国と自国民の成長に良い影響を与えた。"
- desc_lit_centers_urbanization_modifier:0 "この州はリトアニア領内でも都市化の中心地として発展している。多くの商人や芸術家、心豊かな人々が集い、この美しい街に息吹を吹き込んでいる。"
+ desc_lit_centers_urbanization_modifier:0 "This province is a growing center of urbanization within the Lithuanian lands. Many merchants, artists and people of considerable affluence are attracted, breathing life in this beautiful city."
  desc_lit_efficient_sejmiks_modifier:0 "新しく任命されたセイミクはリトアニアの法を守り、その結果、円滑な立法手続きを行っているようだ。"
  desc_lit_efficient_leg_proceedings_modifier:0 "王室が行った官僚制度改革により、以前にも増して効率的な行政が行われるようになり、時代の流れに乗りつつある。"
  desc_lit_harnessed_steppes_modifier:0 "国境から南東に広がるステップには多くの遊牧民が暮らしている。彼らに課税することで、毎月の収支に顕著な好影響が出ている。"
@@ -4771,3 +4771,58 @@
  desc_hsa_center_of_mineral_trade:0 "この州には金や貴金属の鉱脈がある。交易の収入源として不可欠な鉱脈だ。"
  desc_hsa_maritime_hegemon_modifier:0 "誰もが認める海の支配者となった。統べよハンザ！ハンザよ大海原を支配せよ！"
  desc_capital_expansion_modifier:0 "労働と貨幣の余剰価値を自国の栄光ある首都へのさらなる開発と改善に振り向けるのだ！"
+ unlocked_prussian_monarchy_base_tt:0 "Has unlocked the '§YPrussian Monarchy§!' government reform."
+ unlock_estate_brahmins_tt:0 "Unlock the §YBrahmins§! Estate."
+ unlock_estate_church_tt:0 "Unlock the §YClergy§! Estate."
+ unlock_estate_maratha_tt:0 "Unlock the §YMaratha§! Estate."
+ unlock_estate_nobles_tt:0 "Unlock the §YNobles§! Estate."
+ unlock_estate_burghers_tt:0 "Unlock the §YBurghers§! Estate."
+ unlock_estate_vaisyas_tt:0 "Unlock the §YVaishyas§! Estate."
+ unlock_estate_nomadic_tribes_tt:0 "Unlock the §YTribes§! Estate."
+ unlock_estate_dhimmi_tt:0 "Unlock the §YDhimmi§! Estate."
+ unlock_estate_jains_tt:0 "Unlock the §YJains§! Estate."
+ unlock_estate_rajput_tt:0 "Unlock the §YRajputs§! Estate."
+ unlock_estate_janissaries_tt:0 "Unlock the §YJanissaries§! Estate."
+ unlock_estate_eunuchs_tt:0 "Unlock the §YEunuchs§! Estate."
+ disable_rebels_from_seize_land_for_estate_janissaries:0 "§YJanissaries§! will no longer raise any rebels when their land gets seized if their loyalty drops below §Y30§!."
+ disable_rebels_from_seize_land_for_estate_eunuchs:0 "§YEunuchs§! will no longer raise any rebels when their land gets seized if their loyalty drops below §Y30§!."
+ desc_swe_support_of_the_peasantry_prov:0 "This province has the support of the peasants."
+ flavor_teu.30.a.bt:0 "The Empire has seen through our deception. According to the Reichsverordnung 66, the Teutonic Knights have no place within the Empire."
+ desc_naval_supplies_bonus_prod:0 "This province produces extra Naval Supplies."
+ flavor_fin.1.t:0 "Finnish Imperial Ambitions"
+ flavor_fin.1.desc:0 "As our country grows into a proper empire, the proud Finns wish to reflect the sucessful from-rags-to-riches story of our [Root.GovernmentName]. Our advisors have several suggestions for a proper name of our rising empire..."
+ flavor_fin.1.a:0 "We shall be known as the Finnish Baltic Empire!"
+ flavor_fin.1.b:0 "The Finnish Empire; simple and elegant!"
+ flavor_fin.1.c:0 "Our realm is the one of Greater Finland!"
+ flavor_fin.1.d:0 "The native tongue of our state: Suomi!"
+ flavor_fin.1.e:0 "We should rather stick with Finland."
+ lae_emperor_constantinople:0 "コンスタンティノープルの皇帝"
+ lae_emperor_constantinople_desc:0 "コンスタンティノープルは、再び蘇ったラテン帝国の首都となり、その地から拡大し、その権威を発揮することになるだろう。"
+ lae_latin_patriarch:0 "ラテン総主教"
+ lae_latin_patriarch_desc:0 "総主教は東地中海の4つの府主教であり、コンスタンティノープルのラテン総主教は、本地方における自らの権威の確立を請求している。"
+ lae_byzantine_bureaucracy:0 "ビザンツ式官僚制"
+ lae_byzantine_bureaucracy_desc:0 "ビザンツ帝国は、千年にわたる運営によって確立した行政の長き伝統を継承した。再興を果たしたラテン帝国に対して、この官僚制を用いることは良い考えだろう。"
+ lae_guilds_pera:0 "ペラの交易ギルド"
+ lae_guilds_pera_desc:0 "イタリア商人の植民地がコンスタンティノープルで創立され、彼らの本部は金角湾の向こう側にあるペラの町に位置している。"
+ lae_partitio_graeci:0 "ギリシャ分割"
+ lae_partitio_graeci_desc:0 "Efforts to reclaim lands from schismatic Greeks to Roman Catholicism is the top priority of the Latin emperors."
+ lae_frankokratia:0 "フランコクラティア"
+ lae_frankokratia_desc:0 "'Frank' is the generic term that encompasses all the countries of Western and Central Europe, which are the main diplomatic and military support of the Latin Empire."
+ 10_permanent_power_projection:0 "Mission Reward Power Projection §Y(Permanent)§!"
+ FB1:0 "フィンランド帝国"
+ FB1_ADJ:0 "フィンランド帝国"
+ FB2:0 "大フィンランド"
+ FB2_ADJ:0 "大フィンランド"
+ FB3:0 "スオミ"
+ FB3_ADJ:0 "スオミ"
+ KLU:0 "カルマル同盟"
+ KLU_ADJ:0 "カルマル"
+ NSU:0 "北海帝国"
+ NSU_ADJ:0 "北海"
+ hsa_war_minister_modifier:0 "War Minister"
+ hsa_defensive_tactics_modifier:0 "Defensive Tactics"
+ hsa_regular_mercenary_corps_modifier:0 "Regular Mercenary Corps"
+ hsa_guerilla_warfare_modifier:0 "Guerilla Warfare"
+ hsa_hanseatic_artillery_modifier:0 "Hanseatic Artillery"
+ hsa_modern_drilling_techniques_modifier:0 "Modern Drilling Techniques"
+ hsa_hanseatic_military_conduct_modifier:0 "Hanseatic Military Conduct"
