--- a/source/localisation/common_sense_l_english.yml
+++ b/source/localisation/common_sense_l_english.yml
@@ -780,7 +780,7 @@
  alert_too_few_seats_of_parliament_instant:0 "§Y$NAME$の議席不足§!"
  alert_too_few_seats_of_parliament_delayed:1 "$NAME$において§Y$NUM$§!議席以上が必要ですが、§R$AMT$§!議席しかありません。議席を増やさない場合は、追加の議席が自動的に割り当てられます。"
  START_DEBATE_TOOLTIP:0 "§Y議論を開始§!"
- START_DEBATE_TOOLTIP_DELAYED:0 "議論は少なくとも§Y$YEARS$§!年間継続し、最終的に、あなたを支持する議席数に応じて議論に勝つ可能性があります。成功すれば選択した問題についてボーナスが得られますが、失敗した場合は§R$PRESTIGE$§!の威信が減少します"
+ START_DEBATE_TOOLTIP_DELAYED:1 "議論は数年間（通常は$YEARS|Y$年間）継続し、最終的に、あなたを支持する議席数に応じて議論に勝つ可能性があります。成功すれば選択した問題についてボーナスが得られますが、失敗した場合は§R$PRESTIGE$§!の威信が減少します"
  PLACATE_RULERS:0 "地元統治者の懐柔"
  PLACATE_RULERS_WHAT:0 "我々をなだめる"
  PLACATE_RULERS_EFFECT:0 "我々の独立欲求は$LD$変更されました。"
@@ -827,7 +827,7 @@
  DIVERT_TRADE:0 "交易の転換"
  divert_trade:0 "宗主国が交易を転換"
  SEIZE_TERRITORY:0 "土地の接収"
- FORTIFY_MARCH:0 "辺境伯を強化"
+ FORTIFY_MARCH:1 "従属国の要塞化"
  SUBSIDIZE_ARMIES:0 "陸軍補助"
  subsidize_armies:0 "宗主国が軍隊を助成"
  SUBSIDIZE_ARMIES_STOP_WHAT:0 "我々の軍隊への助成を停止しています"
@@ -869,9 +869,9 @@
  subject_interaction_events.3.d:0 "僭称者の反乱軍が我々に迫る中で、[From.Country.GetName]の[From.Monarch.GetTitle][From.Monarch.GetName]に送られた使者はすぐに戻らなければならない。もし我々が幸運であれば、使者には兵士と金が[From.Country.GetName]から与えられ、その出来損ないの反乱軍を撃退するのに役立つだろう！"
  subject_interaction_events.3.a:0 "[From.Country.GetName]の[From.Monarch.GetName]は我々に金と兵士を送った！"
  subject_interaction_events.3.b:0 "[From.Monarch.GetName]は我々に助けを送ることを拒否した！"
- subject_interaction_events.4.t:0 "無能な親族"
+ subject_interaction_events.4.t:1 "[incompetent_cousin_country.GetName]の無能な親族"
  subject_interaction_events.4.d:1 "我々の従属国である[incompetent_cousin_country.GetName]を支配する親愛なる大切な親族は、無能な道化師であることが証明されており、いかなる国家を支配することもできないし、支配するべきでもない。"
- subject_interaction_events.4.a:0 "我々の従属国を支配するために、より良い者を見つけることを試みる。"
+ subject_interaction_events.4.a:1 "[incompetent_cousin_country.GetName]を支配するために、より良い者を探してみる。"
  subject_interaction_events.4.b:0 "国に混乱をもたらすだけだ。そのままにしておけ。"
  subject_interaction_events.5.t:0 "有能な親族"
  subject_interaction_events.5.d:0 "改革が行われ、無能な閣僚や顧問が解雇され、陸軍と海軍はこれまでにないほどより良いものとなっている…まるで我々の親族が従属国をしっかりした手で支配し、有能な決断をしているように見える。"
@@ -1308,7 +1308,7 @@
  scutage_desc:1 "属国に対し、彼らの収入の$TAX$（現在は毎月$AMOUNT|Y$¤）を追加で軍役代納金として支払うよう強制します。しかしながら、彼らはもはや戦争に呼び出されません。"
  scutage_ld:0 "軍役代納金をオフにすると、彼らの独立欲求を$VAL$増加させます。"
  subsidize_armies_desc:0 "月間人的資源の§Y$MP$§!を辺境伯に送ります。これにより彼らからの評価が$OPINION$変化するでしょう。"
- fortify_march_desc:0 "辺境伯の砦を建設したり、アップグレードしたりします。要塞の代金は我が国が払います。"
+ fortify_march_desc:1 "従属国の要塞を建設したり、アップグレードしたりします。要塞の代金は我が国が払います。"
  fortify_march_desc2:0 "$COST$の費用で§Y$PROV$§!の要塞を§Y$NAME$§!にアップグレードします。"
  enforce_culture_desc:0 "同君連合下位国の主要文化を自国の文化（§Y$CULTURE$§!）に変更します。彼らの独立欲求は$LD$増加します。また、彼らの総開発度により、$DIP$£dip£のコストもかかります。"
  siphon_income_desc:0 "彼らの年間収入（$AMOUNT$）の$VAL$を吸い上げます、これは関係を$OPINION$悪化させ、独立欲求を$LD$増加させます。"
