--- a/source/localisation/golden_century_l_english.yml
+++ b/source/localisation/golden_century_l_english.yml
@@ -50,12 +50,12 @@
  MODIFIER_CANNONS_FOR_HUNTING_PIRATES_IN_FLEET:0 "艦隊海賊狩り効率"
  MODIFIER_FLAGSHIP_LANDING_PENALTY:0 "移乗時の戦闘ペナルティ"
  PROVINCE_WITHOUT_PORT:0 "選択した州には港がありません。"
- COUNTRY_ALREADY_HAVE_FLAGSHIP:0 "既に旗艦を保有しています。"
+ COUNTRY_ALREADY_HAVE_FLAGSHIP:1 "We already have as many Flagships built or in progress as we are allowed ($NUM|Y$)."
  COUNTRY_ALREADY_BUILDING_FLAGSHIP:0 "既に旗艦を建造中です。"
  FLAGSHIP_NAVY_TOO_SMALL:0 "我が海軍は小さすぎます。海軍内に水兵が$REQUIRED_SAILORS|Y$人以上必要ですが、$USED_SAILORS|R$しかいません。"
  FLAGSHIP_CONSTRUCTION_TOOLTIP:0 "旗艦「$NAME|Y$」は、$DATE|Y$にここで進水するでしょう。"
  FLAGSHIP_MAINTENANCE_MODIFIER:0 "$VALUE|R$"
- FLAGSHIP_MAINTENANCE_TOTAL:0 "総合維持費：$VALUE|R$¤"
+ FLAGSHIP_MAINTENANCE_TOTAL:1 "Cost: $COST|R$¤\nMaintenance: $MAINTENANCE|R$¤"
  FLAGSHIP_BASE_MAINTENANCE:0 "基本維持費：$VALUE|R$¤"
  FLAGSHIP_MODIFICATION_MAINTENANCE:0 "$NAME$：$VALUE|R$¤"
  FLAGSHIP_NUMBER_OF_MODIFICATIONS:0 "$CURRENT$/$MAX$"
@@ -91,29 +91,29 @@
  dominican_order_desc:0 "ドミニコ会は、全人類の自然権を堅く支持している。奴隷制と虐待を嫌い、彼らは思いやりのある行為によって世界を変えようとするのだ。"
  franciscan_order:0 "フランシスコ会"
  franciscan_order_desc:0 "アシジの聖フランシスコの継承者たちは、信心者たちに模範を通して正しい行動をするよう求めている。不信心者のため、彼らは神の法を課すのに必要なことを行う非常に厳格な者たちだ。"
- HOLY_ORDER_WHEN_ESTABLISHED:0 "右記の修道会を設立した時："
+ HOLY_ORDER_WHEN_ESTABLISHED:1 "When establishing the $TYPESHORT$:"
  HOLY_ORDER_WHEN_ESTABLISHED_IN_PROVINCES:0 "設立すると、州は以下のように変化します："
  HOLY_ORDER_WHEN_ESTABLISHED_PERMANENT:0 "州への恒久的な効果："
- HOLY_ORDERS:0 "修道会"
- HOLY_ORDER_NOT_AVAILABLE:0 "§Rこの修道会を設立できません：§!"
- ESTABLISH_COST:0 "この修道会を設立するには、$COST|Y$ $ICON$ のコストがかかるでしょう。"
- CONFIRM_ESTABLISH_HOLY_ORDER:0 "修道会の設立"
- CONFIRM_ESTABLISH_HOLY_ORDER_DESC:0 "$ORDER|Y$修道会を$STATE|Y$に設立してもよろしいですか？一度設立すると変更することはできません。設立すると以下の影響を及ぼします：\n\n$EFFECTS$"
- HOLY_ORDER_ESTABLISHED:0 "$ORDER|Y$修道会が$STATE|Y$に設立しました。\n"
- HOLY_ORDER_CANNOT_AFFORD:0 "§R今、この修道会を設立する余裕はありません。§!\n"
- HOLY_ORDER_NOT_ESTABLISHED:0 "$ORDER|Y$修道会が$STATE|Y$に設立していない。\n"
- ESTABLISH_HOLY_ORDER:0 "$ORDER|Y$修道会が$STATE|Y$に設立されます。"
- ESTABLISH_HOLY_ORDER_WRONG_OWNER:0 "§R修道会を設立するには、ステートを自国か従属国が領有していなければなりません。§!"
- ESTABLISH_HOLY_ORDER_NOT_OWNING_ALL:1 "§R修道会を設立するには、ステートを自国か従属国が領有し、中核化していなければなりません。§!"
+ HOLY_ORDERS:1 "Local Organisation"
+ HOLY_ORDER_NOT_AVAILABLE:1 "§Rこの$TYPESHORT$を設立できません：§!"
+ ESTABLISH_COST:1 "この$TYPESHORT$を設立するには、$COST|Y$ $ICON$ のコストがかかるでしょう。"
+ CONFIRM_ESTABLISH_HOLY_ORDER:1 "$TYPE$の設立"
+ CONFIRM_ESTABLISH_HOLY_ORDER_DESC:1 "Are you sure you want to establish the $ORDER|Y$ $TYPE$ in the $STATE|Y$? Once established, it cannot be changed. Establishing it will have the following effects:\n\n$EFFECTS$"
+ HOLY_ORDER_ESTABLISHED:1 "$ORDER|Y$ $TYPE$ established in $STATE|Y$\n"
+ HOLY_ORDER_CANNOT_AFFORD:1 "§R今、この$TYPESHORT$を設立する余裕はありません。§!\n"
+ HOLY_ORDER_NOT_ESTABLISHED:1 "$ORDER|Y$ $TYPE$ not established in $STATE|Y$\n"
+ ESTABLISH_HOLY_ORDER:1 "$ORDER|Y$ $TYPE$ will be established in $STATE|Y$"
+ ESTABLISH_HOLY_ORDER_WRONG_OWNER:1 "§RIn order to be able to establish a local organisation, the state must be owned by you or one of your subjects.§!"
+ ESTABLISH_HOLY_ORDER_NOT_OWNING_ALL:2 "§RAll provinces in a state must be owned and cored by your nation or a subject for you to be able to establish a local organisation.§!"
  removes_slaves_tooltip:0 "このステート内に交易品として§Y奴隷§!があるとき、これを新たな交易品に置き換えます。"
  EVERY_PROVINCE_IN_STATE:0 "ステートのすべての州"
- HOLY_ORDER_DESC:1 "自国が領有し、完全に中核化したステートで修道会を設立することができます。修道会を設立すると、設立したステートの州すべてに対して即座に、そして恒久的に効果が得られます。一度設立すると変更はできません。"
- HOLY_ORDER_DISABLED_NOT_OWNING_ALL:0 "§Rステート内のすべての州が$COUNTRY$によって領有され、中核化されていないので、この修道会は現在その任務を遂行できません。§!"
+ HOLY_ORDER_DESC:2 "You can establish local organisations in states that are fully owned and cored by you. Local organisations will give you immediate effects when establishing them and permanent effects in all provinces of their state. Once established you cannot change it."
+ HOLY_ORDER_DISABLED_NOT_OWNING_ALL:1 "§RThis local organisation is currently unable to perform its mission because all provinces in the state are not owned and cored by $COUNTRY$.§!"
  HOLY_ORDER_ESTABLISHED_BY:0 "設立国：\n$COUNTRY$"
  MACRO_CLICK_TO_BUILD_FLAGSHIP:0 "$PROVINCE$で旗艦を建造するにはクリック"
  MACRO_BUILD_FLAGSHIP:0 "旗艦の建造"
  tortoise.1.t:0 "カメの群れ"
- tortoise.1.d:0 "ガラパゴス諸島の植民者の一部は、大きな土着のゾウカメを食べるようになった。この動かず、無防備な巨体は完全に家畜となり、通過する捕鯨船の間で商品化され、植民地唯一の収入源となった。\n一度でもガラパゴスゾウガメを食べると、他の動物食は全く食べたくなくなるほどであるといわれており、他のあらゆる食べ物に勝る消化の良さと量を持つ肉は、いささかの不便を感じることもなく食べられている。"
+ tortoise.1.d:0 "ガラパゴス諸島の植民者の一部は、大きな土着のゾウカメを食べるようになった。この動かず、無防備な巨体は完全に家畜となり、通過する捕鯨船の間で商品化され、植民地唯一の収入源となった。\n\n一度でもガラパゴスゾウガメを食べると、他の動物食は全く食べたくなくなるほどであるといわれており、他のあらゆる食べ物に勝る消化の良さと量を持つ肉は、いささかの不便を感じることもなく食べられている。"
  tortoise.1.a:0 "美味しそうなカメ…"
  delicious_tortoises:0 "カメの群れ"
  desc_delicious_tortoises:0 "巨大なカメは食用として集められている。非常に美味なごちそうとして知られているのだ。"
@@ -439,8 +439,8 @@
  aissawa_order:0 "アイサワ"
  aissawa_order_desc:0 "讃美歌と祈祷の伝統が音楽と舞踊を特色とする儀式に発展した新しいスーフィズムの宗派である。"
  order_piety_tooltip:0 "§Yステートのすべての州§!から神秘主義に向け§Y2§!移動します。"
- CONFIRM_ABANDON_HOLY_ORDER:0 "このステートに設置されている$NAME|Y$修道会は放棄されます：\n$EFFECT$"
- HOLY_ORDER_ALREADY_ESTABLISHED:0 "§Rこのステートにはすでに修道会が設立されています。§!"
+ CONFIRM_ABANDON_HOLY_ORDER:1 "The $NAME|Y$ $TYPE$ will abandon this state:\n$EFFECT$"
+ HOLY_ORDER_ALREADY_ESTABLISHED:1 "§RA local organisation is already established in this state.§!"
  privateering:0 "私掠船"
  flagship_events.1.t:0 "[From.GetName]により旗艦を拿捕！"
  flagship_events.1.d:0 "[Root.GetName]の誇り、[Root.GetLostFlagshipName]は[From.GetAdjective]艦隊との激しい海戦に巻き込まれた。激しい抵抗を続けたものも敵の手へと落ち、旗艦を失った我らの艦隊は既に敗退した。[Root.GetLostFlagshipName]が我々に仕向けられるかもしれないが、耐えねばならない。"
@@ -538,3 +538,4 @@
  flavor_nav.5.a.tt:0 "§Y[ARA.Monarch.Dynasty.GetName]§!家の一員が[ARA.GetName]を統治するでしょう。"
  flavor_tun.EVTOPTC1:0 "彼にアルジェの自由な自治権を与える。"
  MODIFIER_MAY_FABRICATE_FOR_VASSALS:1 "従属国への請求権の捏造"
+ pirates.4.c:0 "We do not need any pirates in our harbor."
