--- a/source/localisation/hnn_l_english.yml
+++ b/source/localisation/hnn_l_english.yml
@@ -39,7 +39,7 @@
  positive_karma:0 "正のカルマ"
  negative_karma:0 "負のカルマ"
  BREAK_ALLIANCE_EFFECT:0 "$WHO|Y$との同盟を破棄する"
- MODIFIER_MILITARY_TACTICS:0 "軍事戦術：$VALUE|G$"
+ MODIFIER_MILITARY_TACTICS:1 "軍事戦術"
  ONLY_HUSSARS_MODIFIER:0 "§Y有翼重騎兵連隊にのみ影響§!"
  BANNER_LIMIT_CULTURE:0 "$PROVINCE$は$CULTURE$文化の州なので、八旗連隊を召集できません。"
  LionsOfTheNorthDLC:0 "Lions of the North"
@@ -51,3 +51,5 @@
  MODIFIER_MANPOWER_IN_OWN_CULTURE_PROVINCES:0 "主要文化を持つ州での人的資源"
  MODIFIER_MANPOWER_IN_ACCEPTED_CULTURE_PROVINCES:0 "受容文化を持つ州での人的資源"
  MODIFIER_MANPOWER_IN_CULTURE_GROUP_PROVINCES:0 "同じ文化グループを持つ州での人的資源"
+ under_governing_capacity_modifier:0 "Under Governing Capacity"
+ UNDER_GOVERNING_CAPACITY_TOOLTIP:0 "\nBenefits for being §Gunder§! capacity:\n$MOD$"
