--- a/source/localisation/manchu_l_english.yml
+++ b/source/localisation/manchu_l_english.yml
@@ -755,7 +755,7 @@
  xilin_gol_area_adj:0 "シリンゴル"
  sinicize_culture_title:0 "我々の文化の中国化"
  sinicize_culture_desc:0 "我々の文化は我らの最高の誇りである。我々の言葉は他に類を見ないものであり、我々の伝統と遺産は社会の柱である。\nそれでも、中国の言語と文化が数十年にわたって我々に与えてきた影響を否定することはできないし、その影響は未だかつてないほど大きいものとなっている。誰もがこの決定に賛同しているわけではないが、我が国の[Root.Culture.GetName]人と中国人との間により素晴らしい調和を生み出すために、我々の文化を中国化することは考慮する価値のあることかもしれない。"
- sinicize_culture_tt:1 "新世界またはオセアニアにない§Y[Root.Culture.GetGroupName]§!文化の州をすべて[Root.GetName]またはその従属国（非朝貢国）が領有している。"
+ sinicize_culture_tt:2 "新世界またはオセアニアにない§Y[Root.Culture.GetName]§!文化の州をすべて[Root.GetName]またはその従属国（非朝貢国）が領有している。"
  chinese_culture_group_dominates_in_country:0 "中華文化グループの1つが[Root.GetName]の§Y支配的な文化§!である。"
  sinicize_culture_ct:0 "§Y[Root.Culture.GetName]§!文化の州がすべて§Y中華§!文化グループに取り入れられます。"
  sinicize_mongols_ct:0 "§Yモンゴル§!、§Yホルチン§!、§Yハルハ§!、§Yオイラト§!文化の州がすべて§Y中華§!文化グループに取り入れられます。"
@@ -782,3 +782,5 @@
  flavor_mch.EVTOPTA8:0 "天の慈悲があらんことを。"
  mch_missions.5.b:0 "この島の生活もいいものだが..."
  kor_defeat_shogun_tt:1 "宗教の§Y神道§!を調和中に本ミッションが完了した場合、宗教的調和の進捗§G+15§!を獲得する。\n\n既に§Y神道§!を調和している場合、代わりに軍事力§G+100§!を獲得する。"
+ sinicize_culture_at:0 "Every §Y[Root.Culture.GetGroupName]§! province, which is not in the New World or in Oceania, is owned by [Root.GetName] or its subjects."
+ zhuang_new:0 "シナ・チワン"
