--- a/source/localisation/personalityoptions_l_english.yml
+++ b/source/localisation/personalityoptions_l_english.yml
@@ -697,3 +697,33 @@
  personality_options.5045.b:0 "政府の政策を抜本的に見直す。"
  personality_options.5051.d:0 "農民を保護するための新しい改革を導入する。"
  personality_options.6003.a:0 "小さな代表機関を設立する。"
+ cuirassier_leader_personality_die_desc:1 "[GetHerHisCap] engagement for the cavalry will be missed."
+ cruel_tactician_personality_die_desc:0 "The day of [GetHerHis] demise will be celebrated by our enemies as a holiday."
+ frontline_holder_personality_die_desc:0 "[GetHerHisCap] death will not be in vain as our troops hold the line."
+ strict_drillmaster_personality_die_desc:0 "May [GetHerHis] lessons inspire greatness for future generals."
+ naval_strategist_personality_die_desc:0 "[GetHerHisCap] strategies on the sea saved many lives."
+ inspirational_captain_personality_die_desc:0 "[GetHerHisCap] inspirational speeches will be remembered by generations of sailors."
+ naval_cannoneer_personality_die_desc:0 "The sound of our cannons will never as loud as they were during [GetHerHis] leadership."
+ wooden_waller_personality_die_desc:0 "[GetHerHisCap] confrontial warfare led us to victory where other ships would have sunk."
+ cunning_navigator_personality_die_desc:0 "[GetHerHisCap] navigation skills saved the lifes of many sailors."
+ cuirassier_leader_personality:0 "Cuirassier Leader"
+ desc_cuirassier_leader_personality:0 "This General is a Cuirassier Leader. The army commanded by this leader will be able to support more cavarly than usual."
+ cruel_tactician_personality:0 "Cruel Tactician"
+ desc_cruel_tactician_personality:0 "This General is a Cruel Tactician. Troops commmanded by this leader will be more efficient at breaking the morale of the enemy."
+ frontline_holder_personality:0 "Frontline Holder"
+ desc_frontline_holder_personality:0 "This General is a Frontline Holder. Troops commmanded by this leader will be more resillient to the loss of morale."
+ strict_drillmaster_personality:0 "Strict Drillmaster"
+ desc_strict_drillmaster_personality:0 "This General is a Strict Drillmaster. Troops commmanded by this leader will be of greater discipline and do not lose their drill as fast."
+ naval_strategist_personality:0 "Naval Strategist"
+ desc_naval_strategist_personality:0 "This Admiral is an Naval Strategsist. Ships commanded by this leader are more likely to retreat from a bad battle instead of getting sunk."
+ inspirational_captain_personality:0 "Inspirational Captain"
+ desc_inspirational_captain_personality:0 "This Admiral is an Inspirational Captain. The sailors commanded by this leader will be quicker to regain morale in the face of defeat."
+ naval_cannoneer_personality:0 "Naval Cannoneer"
+ desc_naval_cannoneer_personality:0 "This Admiral is a Naval Cannoneer. The ships of this leader will bring more cannons to a fight in order to bombard the enemies."
+ wooden_waller_personality:0 "Wooden Waller"
+ desc_wooden_waller_personality:0 "This Admiral is a Wooden Waller. Ships commanded by this leader will be able to withstand more damages than those commanded by other captains."
+ cunning_navigator_personality:0 "Cunning Navigator"
+ desc_cunning_navigator_personality:0 "This Admiral is a Cunning Navigator. Ships commanded by this leader will reach their destination faster than usual."
+ great_explorer_personality:0 "Great Explorer"
+ great_explorer_personality_desc:0 "A legendary explorer, ready to charter unknown seas and bring prestige and splendor to our name!"
+ great_explorer_personality_die_desc:0 "Alas, a great catastrophe! Magellan, our most highly esteemed and legendary navigator has embraced the afterlife. A grey and sorrowful day is upon us..."
