Save/Update files [ci skip]

--- a/source/localisation/origins_l_english.yml
+++ b/source/localisation/origins_l_english.yml
@@ -1276,7 +1276,7 @@
  zim_dominate_south_africa_desc:0 "南部の平原には競争相手がおらず、従って、南部の平原は自国の正当なる請求である。この請求を現実のものとすべきだろう。"
  zim_amongst_the_great_powers_title:0 "アフリカの列強"
  zim_amongst_the_great_powers_desc:0 "北から来た外国人が世界中で影響力を拡大しようとしているため、世界は縮まっている。自国が没落し、ヨーロッパ人の次の標的にならないよう、世界の主要国の一つにならねばならない。"
- zim_amongst_the_great_powers_tt:1 "戦力投射が§Y不変§!となる。\n"
+ zim_amongst_the_great_powers_tt:1 "この戦力投射は§Y永続§!です。\n"
  zim_modernize_state_title:0 "国家の近代化"
  zim_modernize_state_desc:1 "建国以来、自国民はムウェネムタパをジンバブエの神、ムワリの化身として崇めてきた。北からの異邦人の到来により、国民の頭の中には新たな世界像が入ってきた。それは、ムウェネムタパが神に従属する世界。あるいは、人々が実際に[Root.GetName]を支配する世界だ。\nしかし、思想だけでは国家の近代化はできない。政府の基幹をより善良なる国民のために変化させるには、技術と知識が必要だ。"
  aju_annex_mogadishu_title:0 "モガディシュの併合"
@@ -2453,8 +2453,8 @@
  decline_of_mali_desc:0 "痛み。苦しみ。そしてマリの生き方。"
  w_african_tolerance_fetishist:0 "宗教の統一"
  desc_w_african_tolerance_fetishist:0 "西アフリカで真の信仰を確立した！伝統と呪術師の威光は疑う余地などないのだ！"
- flavor_kon.16.t:0 "Foundation of a Kingdom"
- flavor_kon.16.d:0 "IT is apparent that our old systems are no longer feasible to maintain. Foreigners are landing on our shores and bring new ideas and technologies to our people. But they also pose a threat to our society. Our advisors recommend to reshape our government into a proper monarchy."
- flavor_kon.16.a:0 "Reform the state into a proper Kingdom"
- flavor_kon.16.b:0 "The old ways are good enough"
+ flavor_kon.16.t:0 "王国の基盤"
+ flavor_kon.16.d:0 "自国の古い制度を維持することがもはや不可能になってきていることは明らかです。外国人が自国の海岸に上陸し、新しい考えや技術を自国民にもたらしてくれています。しかし、彼らは自国の社会に脅威ももたらしています。自国の顧問は、政府を正式の君主制に再構築することを推奨しています。"
+ flavor_kon.16.a:0 "国家を正式な王国へと改革せよ"
+ flavor_kon.16.b:0 "昔のままで十分さ"
  absolutism_dynamic_reward_tt:0 "§YAbsolutism§! is NOT active.\nThe conditions for this mission will change drastically when Absolutism gets active in the §YAge of Absolutism§! or the §YAge of Revolution§!."
