--- a/source/localisation/scandinavia_l_english.yml
+++ b/source/localisation/scandinavia_l_english.yml
@@ -4511,8 +4511,8 @@
  teu_pru_conquer_silesia_bt:0 "§Y北ドイツ§!及び§Yポーランド§!地方に§Yソルブ§!文化の州が存在しない。"
  liv_heal_the_schism_at:0 "§Y[295.GetName]§!、§Y[33.GetName]§!、§Y[310.GetName]§!が§Yカトリック§!で§Yカトリック§!国が領有している。"
  liv_heal_the_schism_bt:0 "§Yロシア§!にある州で§Yカトリック§!である。"
- flavor_liv.20.b.tt:0 "領有するステート州全てで自治率§R20§!を獲得する。"
- flavor_liv.20.c.tt:0 "領有するステート州全てで自治率§G-20§!を獲得する。"
+ flavor_liv.20.b.tt:0 "領有するステート州すべてで、自治率が§R20§!増加します。"
+ flavor_liv.20.c.tt:0 "領有するステート州すべてで、自治率が§G-20§!される。"
  got_pirate_raid_the_baltics_at:0 " §Yバルト海§!の沿岸州を§Y[Root.GetName]§!が領有しているか、もしくは§Y襲撃された§!状態である。"
  mechanic_centralize_state_half_refund_yes:0 "§Yステートの集権化§!の費用は§G50%§!返還される"
  mechanic_enforced_interfaith_dialogue_buff_yes:0 "階級特権「§Y宗教間対話の強制§!」は聖職者の忠誠度と最大絶対主義の減少を招かなくなります。"
@@ -4805,10 +4805,10 @@
  lae_guilds_pera:0 "ペラの交易ギルド"
  lae_guilds_pera_desc:0 "イタリア商人の植民地がコンスタンティノープルで創立され、彼らの本部は金角湾の向こう側にあるペラの町に位置している。"
  lae_partitio_graeci:0 "ギリシャ分割"
- lae_partitio_graeci_desc:0 "Efforts to reclaim lands from schismatic Greeks to Roman Catholicism is the top priority of the Latin emperors."
+ lae_partitio_graeci_desc:0 "シスマ派ギリシャ人の土地をローマ・カトリックに奪還することは、ラテン帝国皇帝の最優先事項である。"
  lae_frankokratia:0 "フランコクラティア"
- lae_frankokratia_desc:0 "'Frank' is the generic term that encompasses all the countries of Western and Central Europe, which are the main diplomatic and military support of the Latin Empire."
- 10_permanent_power_projection:0 "Mission Reward Power Projection §Y(Permanent)§!"
+ lae_frankokratia_desc:0 "「フランク」とは、西ヨーロッパと中央ヨーロッパの国家全てを包括する総称であり、これらの国々はラテン帝国の外交及び軍事に対する主要な支えとなる。"
+ 10_permanent_power_projection:0 "ミッション報酬の戦力投射§Y(永続)§!"
  FB1:0 "フィンランド帝国"
  FB1_ADJ:0 "フィンランド帝国"
  FB2:0 "大フィンランド"
