--- a/source/localisation/goose_1_35_l_english.yml
+++ b/source/localisation/goose_1_35_l_english.yml
@@ -74,8 +74,8 @@
  reverse_average_oversea_liberty_desire:1 "Reverse Average Overseas Liberty Desire"
  MODIFIER_HAS_TERCIO:0 "Country Allows Tercio Infantry"
  MODIFIER_HAS_MUSKETEER:0 "Country Allows Musketeer Infantry"
- MODIFIER_HAS_SAMURAI:0 "Country Allows Samurai Infantry"
- MODIFIER_HAS_GEOBUKSEON:0 "Country Allows Geobukseon Ships"
+ MODIFIER_HAS_SAMURAI:0 "侍歩兵が国内で利用可能になる"
+ MODIFIER_HAS_GEOBUKSEON:0 "亀甲船が国内で利用可能になる"
  MODIFIER_HAS_MAN_OF_WAR:0 "Country Allows Man Of War Ships"
  MODIFIER_HAS_GALLEON:0 "Country Allows Galleon Ships"
  MODIFIER_HAS_GALLEASSE:0 "Country Allows Galleass Ships"
