Save/Update files [ci skip]

--- a/source/localisation/countries_l_english.yml
+++ b/source/localisation/countries_l_english.yml
@@ -354,7 +354,7 @@
  GBR_ADJ:0 "イギリス"
  GEL_ADJ:0 "ヘルレ"
  GEN_ADJ:0 "ジェノヴァ"
- GEO_ADJ:0 "ジョージア"
+ GEO_ADJ:0 "グルジア"
  GER_ADJ:0 "ドイツ"
  GOL_ADJ:0 "大オルダ"
  GOT_ADJ:0 "ゴットランド"
