--- a/source/localisation/emperor_l_english.yml
+++ b/source/localisation/emperor_l_english.yml
@@ -1028,8 +1028,8 @@
  force_peasant_republic:0 "農民による支配を強制"
  po_reintegrate_into_hre:0 "帝国への再編入"
  take_capital_force_join_hre_no_gain_desc:0 "$CONTINENT|Y$にあり、帝国に加盟できる$COUNTRY|Y$およびその従属国の州がすべて、帝国の一部となります。"
- estate_privileges_and_agendas_events.3.l:0 "The Proposal of the Janissaries"
- estate_privileges_and_agendas_events.3.m:0 "The Proposal of the Eunuchs"
+ estate_privileges_and_agendas_events.3.l:0 "イェニチェリの提案"
+ estate_privileges_and_agendas_events.3.m:0 "宦官の提案"
  estate_privileges_and_agendas_events.6.t:0 "Selling of Crownland"
  estate_privileges_and_agendas_events.6.desc:0 "The treasury of our [Root.GovernmentName] is in a dire situation. Fortunately for us, our estates are very much interested in buying some of our land. Who should we sell our precious property to?"
  estate_privileges_and_agendas_events.6.a:0 "Sell the Crownland to everyone equally."
