--- a/source/localisation/modifers_l_english.yml
+++ b/source/localisation/modifers_l_english.yml
@@ -2313,3 +2313,4 @@
  MODIFIER_EXPAND_INFRASTRUCTURE_COST_MODIFIER:0 "Expand Infrastructure Cost Modifier"
  ara_sindicat_remensa:0 "Sindicat Remença"
  desc_ara_sindicat_remensa:0 "The Sindicat Remença is a peasants' guild or primitive trade union."
+ militarized_society_gain_modifier:0 "Militarization Gain Modifier"
