--- a/source/localisation/achievements_l_english.yml
+++ b/source/localisation/achievements_l_english.yml
@@ -442,7 +442,7 @@
  NEW_ACHIEVEMENT_12_1_NAME:0 "ゴールドラッシュ"
  NEW_ACHIEVEMENT_12_1_DESC:0 "1500年より前にキプチャクを再建する。"
  NEW_ACHIEVEMENT_12_2_NAME:0 "航海王子"
- NEW_ACHIEVEMENT_12_2_DESC:0 "ポルトガルで、1500年までにアフリカ、インド、インドネシアに州を保有する。"
+ NEW_ACHIEVEMENT_12_2_DESC:0 "As Portugal, own provinces in Africa, India and Indonesia before 1500."
  NEW_ACHIEVEMENT_12_3_NAME:0 "亀が下に至るところまで"
  NEW_ACHIEVEMENT_12_3_DESC:0 "朝鮮で135%以上の耐久性の船を持つ。"
  NEW_ACHIEVEMENT_12_14_NAME:0 "ブンテ・クー"
@@ -698,9 +698,9 @@
  NEW_ACHIEVEMENT_100_NAME:0 "No Country for Old Tercios"
  NEW_ACHIEVEMENT_100_DESC:0 "As Spain, have Reformed Tercios, 33 Tercio Units, and control 3 Great Power capitals at the same time"
  NEW_ACHIEVEMENT_101_NAME:0 "All Blue"
- NEW_ACHIEVEMENT_101_DESC:0 "As Portugal, all Europe is owned by you or blue European countries that exist in 1444."
+ NEW_ACHIEVEMENT_101_DESC:0 "As Portugal, all of Europe is owned by you or blue European countries that exist in 1444."
  NEW_ACHIEVEMENT_102_NAME:0 "スターダストクルセイダース"
- NEW_ACHIEVEMENT_102_DESC:0 "As Japan have the Land of the Christian Sun reform while Palestine and Cairo are Christian."
+ NEW_ACHIEVEMENT_102_DESC:1 "As Japan have the Land of the Christian Sun reform while Palestine and Cairo are Christian under us."
  NEW_ACHIEVEMENT_103_NAME:0 "Copium Wars"
  NEW_ACHIEVEMENT_103_DESC:0 "Starting and playing as Ming, own the Britain region."
  NEW_ACHIEVEMENT_104_NAME:0 "Brentry!"
